--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
 
   "scripts": {
-    "chay": "nodemon --inspect app.js",
+    "start": "nodemon --inspect app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ren",
