--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-
   "scripts": {
     "start": "nodemon --inspect app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
-    "express-handlebars": "^6.0.6"
+    "express-handlebars": "^6.0.6",
+    "mongoose": "^6.5.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
