--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
-    "mongoose": "^6.5.0"
+    "mongoose": "^6.5.0",
+    "mongoose-paginate-v2": "^1.7.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
