--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "mongoose": "^6.5.0",
-    "mongoose-paginate-v2": "^1.7.0"
+    "mongoose-paginate-v2": "^1.7.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-openidconnect": "^0.1.1"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
