--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose-paginate-v2": "^1.7.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.1.2",
     "passport-openidconnect": "^0.1.1"
   },
   "devDependencies": {
