--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-handlebars": "^6.0.6",
     "mongoose": "^6.5.0",
     "mongoose-paginate-v2": "^1.7.0",
+    "mongoose-simple-random": "^0.4.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
