--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Ren",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "mongoose": "^6.5.0",
