--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
     "method-override": "^3.0.0",
     "mongoose": "^6.5.0",
     "mongoose-paginate-v2": "^1.7.0",
@@ -25,6 +27,7 @@
   },
   "devDependencies": {
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "prettier": "2.7.1"
   }
 }
