--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lint-staged": "^13.0.3",
     "method-override": "^3.0.0",
     "mongoose": "^6.5.0",
+    "mongoose-delete": "^0.5.4",
     "mongoose-paginate-v2": "^1.7.0",
     "mongoose-simple-random": "^0.4.1",
     "mongoose-timestamp": "^0.6.0",
