--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose-paginate-v2": "^1.7.0",
     "mongoose-simple-random": "^0.4.1",
     "mongoose-timestamp": "^0.6.0",
+    "node-fetch": "^3.2.10",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
