--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "giaohangnhanh": "^1.0.2",
     "http-errors": "^2.0.0",
     "husky": "^8.0.1",
     "jsonwebtoken": "^8.5.1",
