--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "async-validator": "^4.2.5",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
+    "email-validator": "^2.0.4",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "giaohangnhanh": "^1.0.2",
     "http-errors": "^2.0.0",
     "husky": "^8.0.1",
@@ -30,7 +32,8 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
-    "passport-openidconnect": "^0.1.1"
+    "passport-openidconnect": "^0.1.1",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
